new DynamoDB configuration, new API definition, 2 players assigned in parquet files
